# dbt-project

./: README.md  pyproject.toml
backend/: README.md  app.py  db.py  requirements.txt
dbtProject/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbtProject/models/marts/: branch_performance_summary.sql  customer_360.sql  daily_transaction_summary.sql  schema_branch_performance_summary.yml  schema_customer_360.yml  schema_daily_transaction_summary.yml
dbtProject/models/staging/: schema_stg_account.yml  schema_stg_branch.yml  schema_stg_card.yml  schema_stg_customer.yml  schema_stg_hist_transactional.yml  schema_stg_product.yml  sources.yml  stg_account.sql  stg_branch.sql  stg_card.sql  stg_customer.sql  stg_hist_transactional.sql  stg_product.sql
dbtProject/snapshots/: snap_customer.sql
dbtProject/sql query/: sql_file.sql
dbtProject/tests/: test_total_payment_amount_is_positive.sql
duringProject/: commands.txt
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
