[project]
name = "dbt-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dbt-core>=1.11.11",
    "dbt-postgres>=1.10.0",
    "fastapi[standard]>=0.136.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]
